--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<form action="#" class="sector signUp-sector">
 			<h2>Sign up</h2>
 			<input type="text" placeholder="Login" id="signUpLogin" minlength="3" maxlength="20">
-			<input type="password" placeholder="Repeat password" id="signUpPasaswd" minlength="8" maxlength="28">
-			<input type="password" placeholder="Password"  id="signUpRpPasaswd" minlength="8" maxlength="28">
+			<input type="password" placeholder="Password" id="signUpPasaswd" minlength="8" maxlength="28">
+			<input type="password" placeholder="Repeat password"  id="signUpRpPasaswd" minlength="8" maxlength="28">
 			<span>By clicking "Continue", you agree to  </span>
 			<span>the <a href="#">Terms</a> and <a href="#">Privacy Policy</a></span>
 			<input class="btn" id="signUpBtn" type="submit" value="Continue">
